<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.okaeri</groupId>
    <artifactId>okaeri-platform</artifactId>
    <packaging>pom</packaging>
    <version>0.4.0-preview.87</version>

    <modules>
        <module>core</module>
        <!-- minecraft -->
        <module>minecraft</module>
        <module>bukkit</module>
        <module>bungee</module>
        <!-- standalone -->
        <module>standalone</module>
        <module>web</module>
        <module>cli</module>
        <!-- extensions -->
        <module>ext-scheduler-quartz</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>

        <library.okaeri-commands.version>0.8.15</library.okaeri-commands.version>
        <library.okaeri-configs.version>5.0.0-beta.2</library.okaeri-configs.version>
        <library.okaeri-i18n.version>4.0.5</library.okaeri-i18n.version>
        <library.okaeri-commons.version>0.2.22</library.okaeri-commons.version>
        <library.okaeri-injector.version>2.1.0</library.okaeri-injector.version>
        <library.okaeri-validator.version>2.0.4</library.okaeri-validator.version>
        <library.okaeri-placeholders.version>4.0.3</library.okaeri-placeholders.version>
        <library.okaeri-persistence.version>2.0.0-beta.1</library.okaeri-persistence.version>
        <library.okaeri-tasker.version>1.1.9</library.okaeri-tasker.version>
        <library.okaeri-acl.version>0.1.4</library.okaeri-acl.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.24</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M7</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.1</version>
                    <configuration>
                        <compilerArgs>
                            <arg>-parameters</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.2.1</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.4.0</version>
                    <configuration>
                        <doclint>all,-missing</doclint>
                    </configuration>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>storehouse-releases</id>
            <url>https://storehouse.okaeri.eu/repository/maven-releases/</url>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>storehouse-releases</id>
            <url>https://storehouse.okaeri.eu/repository/maven-releases/</url>
        </repository>
        <snapshotRepository>
            <id>storehouse-snapshots</id>
            <url>https://storehouse.okaeri.eu/repository/maven-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

</project>
